# nowplaying-widget

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: build.yml  test.yml
client/: .eslintrc.cjs  .gitignore  .prettierignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
client/e2e/: chrome.spec.ts  editing.spec.ts  formula.spec.ts  helpers.ts  select.spec.ts  studio.spec.ts  templateOptions.spec.ts  templates.spec.ts  theming.spec.ts
client/gallery/: Gallery.tsx  gallery.css  iframe-demo.html  index.html  main.tsx  seed.ts  studio.html  studio.tsx  studioLayout.ts
client/mcp/: README.md  server.ts
client/scripts/: gen-widget-docs.ts  screenshots.mjs
client/src/: App.tsx  main.tsx  styles.css  test-setup.ts
client/src/lib/: devMock.ts  diag.ts  logs.ts  monitorKey.test.ts  monitorKey.ts  monitorLabel.test.ts  monitorLabel.ts  overlay.ts  stt.test.ts  stt.ts  tts.test.ts  tts.ts
client/src/lib/audio/: source.ts
client/src/lib/bridge/: contract.ts
client/src/lib/components/NowPlaying/: NowPlaying.svelte  image.ts  np-source.ts  priority.test.ts  priority.ts  sensors.test.ts  sensors.ts  source.ts  sourceList.test.ts  sourceList.ts
client/src/lib/core/: align.test.ts  align.ts  arrange.test.ts  arrange.ts  background.test.ts  background.ts  builtinThemes.test.ts  builtinThemes.ts  calendar.test.ts  calendar.ts  condition.test.ts  condition.ts  controls.defaults.test.ts  controls.defaults.ts  controls.test.ts  controls.ts  cssComplete.test.ts  cssComplete.ts  cssLint.test.ts  cssLint.ts  cssThreats.test.ts  cssThreats.ts  diagnostics.test.ts  diagnostics.ts  dragSnap.test.ts  dragSnap.ts  flowStyle.test.ts  flowStyle.ts  format.test.ts  format.ts  geometry.test.ts  geometry.ts  haControls.test.ts  haControls.ts  haExposed.test.ts  haExposed.ts  haRegistry.test.ts  haRegistry.ts  haStatus.test.ts  haStatus.ts  (+63 more)
client/src/lib/formula/: engine.test.ts  engine.ts  packageSandbox.ts  useFormula.test.tsx  useFormula.ts
client/src/lib/llm/: source.ts  useLlmChat.ts
client/src/lib/telemetry/: source.ts
client/src/lib/utils/: monitor.ts
client/src/lib/widgets/: AssistantHost.test.tsx  AssistantHost.tsx  BackgroundLayer.css  BackgroundLayer.test.tsx  BackgroundLayer.tsx  BackgroundPanel.tsx  BoxField.css  BoxField.test.tsx  BoxField.tsx  Canvas.css  Canvas.svelte  Canvas.tsx  ColorField.css  ColorField.test.tsx  ColorField.tsx  ColorSwatch.css  ColorSwatch.tsx  ConditionEditor.css  ConditionEditor.test.tsx  ConditionEditor.tsx  ControlsPanel.css  ControlsPanel.test.tsx  ControlsPanel.tsx  CssEditor.css  CssEditor.test.tsx  CssEditor.tsx  CssEditorImpl.tsx  DesignerListPanel.tsx  DiagnosticsPanel.css  DiagnosticsPanel.tsx  DragSnapLayer.css  DragSnapLayer.test.tsx  DragSnapLayer.tsx  ErrorBoundary.css  ErrorBoundary.tsx  FlowNode.test.tsx  FlowNode.tsx  GroupFrame.test.tsx  GroupFrame.tsx  Inspector.css  (+65 more)
client/src/lib/widgets/canvas/: addBeside.test.ts  addContainer.test.ts  alignControls.test.ts  alignControls.ts  bulkEdit.test.ts  closePrompt.test.ts  closePrompt.ts  conditionVisibility.test.ts  conditionVisibility.ts  containerAt.test.ts  containerAt.ts  debugInfo.test.ts  debugInfo.ts  defInUse.test.ts  designerLeave.test.ts  designerLeave.ts  dragIntent.test.ts  dragIntent.ts  dropPlacement.test.ts  dropPlacement.ts  editorOps.ts  gridResize.test.ts  insertTemplate.test.ts  marqueeSelection.test.ts  measure.test.ts  measure.ts  menuPosition.test.ts  menuPosition.ts  menuPreview.test.ts  menuPreview.ts  multiSelect.test.ts  multiSelect.ts  overlayPrefs.test.ts  overlayPrefs.ts  overlayPresentation.test.ts  overlayPresentation.ts  previewTemplate.test.ts  spacingGuard.test.ts  spacingGuard.ts  splitNode.test.ts  (+31 more)
client/src/lib/widgets/meters/: AnalogClock.css  AnalogClock.test.tsx  AnalogClock.tsx  Assistant.css  Assistant.test.tsx  Assistant.tsx  Bar.css  Bar.svelte  Bar.tsx  Button.css  Button.svelte  Button.test.tsx  Button.tsx  Calendar.css  Calendar.test.tsx  Calendar.tsx  Clock.css  Clock.svelte  Clock.test.tsx  Clock.tsx  Cpu.css  Cpu.svelte  Cpu.test.tsx  Cpu.tsx  CpuCoresCanvas.tsx  Gauge.css  Gauge.svelte  Gauge.test.tsx  Gauge.tsx  HaClimate.css  HaClimate.svelte  HaClimate.tsx  HaLight.css  HaLight.svelte  HaLight.tsx  HaSensor.css  HaSensor.svelte  HaSensor.tsx  Iframe.css  Iframe.test.tsx  (+54 more)
client/src/lib/widgets/plugins/: HaSettings.test.tsx  HaSettings.tsx  LlmSettings.tsx  MqttSettings.test.tsx  MqttSettings.tsx  NowPlayingSettings.test.tsx  NowPlayingSettings.tsx  StocksSettings.tsx  ha-commands.ts  ha-exposed-store.ts  ha-source.ts  ha-types.ts  home-assistant.ts  index.ts  llm-commands.ts  llm-status.test.ts  llm-status.ts  llm-studio.ts  llm-tts.ts  llm-types.ts  llm.ts  mqtt-commands.ts  mqtt-source.ts  mqtt-types.ts  mqtt.ts  now-playing.test.tsx  now-playing.ts  packages-commands.ts  packages-source.test.ts  packages-source.ts  packages.ts  samplePack.test.ts  stocks-commands.ts  stocks-source.ts  stocks-symbols.test.ts  stocks-symbols.ts  (+3 more)
client/src/lib/windows/: source.ts
client/src/mcp/: tools.test.ts  tools.ts
client/src/routes/: +page.svelte
client/src/stores/: createStore.ts  llmStore.ts  persist.test.ts  persist.ts  stores.ts
docs/: development.md  ideas.md  landing-zone.md  templating.md  theming.md  third-party-plugins.md  widget-platform.md  widgets.md
docs/examples/: README.md  rainmeter-port.widgets.json
np/: Cargo.toml  package.json  tauri.conf.json
np/capabilities/: migrated.json  overlay.json
np/src/: command.rs  event.rs  listener.rs  main.rs  sensors.rs  state.rs
npi/: Cargo.toml
npi/src/: lib.rs
widgetsack/: Cargo.toml  tauri.conf.json
widgetsack/capabilities/: migrated.json  overlay.json
widgetsack/icons/: icon.icns
widgetsack/src/: audio.rs  bridge.rs  clickthrough.rs  command.rs  control.rs  display.rs  event.rs  ha.rs  listener.rs  llm.rs  log.rs  main.rs  media.rs  mqtt.rs  process_diag.rs  sensors.rs  state.rs  stocks.rs  windowmgr.rs
widgetsack/windows/: hooks.nsh
(+4 files in other folders)
