[package]
name = "npi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "npi"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.windows]
version = "0.48"
features = [
    "Data_Xml_Dom",
    "Foundation",
    "Foundation_Collections",
    "Media",
    "Media_Control",
    "Storage_Streams",
]
