[package]
name = "widgetsack"
version = "0.1.0"
description = "widgetsack desktop widget platform"
authors = ["you"]
license = ""
repository = ""
default-run = "widgetsack"
edition = "2024"
rust-version = "1.90"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures-util = "0.3"
notify = "6"
nvml-wrapper = "0.10"
# HA control + entity catalog over REST. http-only for v1 (no TLS backend pulled in — the
# supported v1 path is a LAN ws:// + http:// HA; wss/https is a future enhancement).
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.33"
tauri = { version = "2", features = ["devtools", "protocol-asset", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["full"] }
# HA WebSocket stream. Default features (connect/handshake) only — no TLS (ws:// for v1).
tokio-tungstenite = "0.24"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

[target.'cfg(target_os = "windows")'.dependencies]
win-gsmtc = { version = "0.1.0", features = ["serde"] }
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

