[package]
name = "widgetsack"
# Keep in lockstep with tauri.conf.json's version (the bundle/updater source of truth).
version = "0.0.19"
description = "widgetsack desktop widget platform"
authors = ["you"]
license = ""
repository = ""
default-run = "widgetsack"
edition = "2024"
rust-version = "1.90"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures-util = "0.3"
# TLS for the HA client (wss/https) via the OS-native stack: SChannel on this Windows-only
# build — no OpenSSL, and no aws-lc-rs/ring (so no NASM/cmake build tooling). Used directly
# only to build the self-signed-cert connector; reqwest/tungstenite use it via their features.
native-tls = "0.2"
notify = "6"
nvml-wrapper = "0.10"
# HA control + entity catalog over REST. native-tls enables https; self-signed certs are an
# explicit per-config opt-in (HaConfig.insecure → danger_accept_invalid_certs).
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls"] }
# Optional MQTT source (peer to HA). default-features=false + use-native-tls reuses the existing
# native-tls=0.2 (SChannel) and pulls in NO rustls/aws-lc-rs/ring — keeping the no-NASM/cmake stance.
rumqttc = { version = "0.25", default-features = false, features = ["use-native-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.33"
tauri = { version = "2", features = ["devtools", "protocol-asset", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["full"] }
# HA WebSocket stream. native-tls handles wss:// (valid certs transparently via connect_async;
# self-signed via connect_async_tls_with_config with an explicit insecure connector).
tokio-tungstenite = { version = "0.24", features = ["connect", "handshake", "native-tls"] }
fontdb = "0.23.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
# Second-launch focuses the running app instead of spawning a duplicate overlay (emits open_studio).
tauri-plugin-single-instance = "2"
# "Launch at login" toggle (wired to the Settings UI separately); LaunchAgent on macOS, registry on Windows.
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "windows")'.dependencies]
win-gsmtc = { version = "0.1.0", features = ["serde"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Media",
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

